--- a/src/assets/blocks/access/AccessBlockCase.scss
+++ b/src/assets/blocks/access/AccessBlockCase.scss
@@ -1,3 +1,11 @@
 .AccessBlockCase {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    &-line{
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+    }
 }
