--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -1,4 +1,5 @@
 @import "./variables.scss";
 @import "./pages/pages.scss";
 @import "./blocks/blocks.scss";
-@import "./elements//elements.scss"
+@import "./elements//elements.scss";
+@import "./defaultClasses.scss";
