--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -3,3 +3,4 @@
 @import "./blocks/blocks.scss";
 @import "./elements//elements.scss";
 @import "./defaultClasses.scss";
+@import "./components//components.scss";
