--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -4,3 +4,4 @@
 @import "./elements//elements.scss";
 @import "./defaultClasses.scss";
 @import "./components//components.scss";
+@import "./modals/modals.scss";
