--- a/src/App.css
+++ b/src/App.css
@@ -14,20 +14,23 @@ a{
   color: #000;
   font-weight: 600;
 }
+.MuiOutlinedInput-root {
+  border: solid 2px #b399cb;
+}
 .primary__btn {
-  width: 100%;
+  width: max-content;
   padding: 10px 0px;
   border: none;
   background-color: #fff;
   color: #000;
-  box-shadow: 0 0 6px 0 #000000aa;
   transition: all .3s;
+  background-color: #b399cb;
   cursor: pointer;
-  margin: auto;
-  font-family: Arial, Helvetica, sans-serif;
-  text-transform: uppercase;
   border-radius: 15px;
   font-weight: 700;
+  font-size: 18px;
+  position: relative;
+
 }
 
 .wrap__content{
@@ -86,7 +89,8 @@ select{
   padding: 5px 5px 5px 10px;
 }
 input[type=date],input[type=time]{
-  border: solid 3px #b399cb;
+  /* border: solid 3px #b399cb; */
+  height: 46px;
   border-radius: 7px;
   width: calc(100% - 21px);
   padding: 5px 5px 5px 10px;
