--- a/src/assets/modals/Modal.scss
+++ b/src/assets/modals/Modal.scss
@@ -8,6 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
     &--outside {
         position: absolute;
         top: 0;
@@ -17,16 +18,24 @@
         background-color: #0000001d;
         backdrop-filter: blur(10px);
     }
+
     &--inner {
         position: relative;
         min-width: 340px;
-        min-height: 300px;
+        min-height: max-content;
         background-color: #fff;
-        padding: 10px;
+        padding: 20px;
         border-radius: 10px;
         box-shadow: 0 0 1px 1px #0000008e;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
     }
+
     &--head {
+        text-align: center;
+
         &-close {
             position: absolute;
             top: 5px;
@@ -34,10 +43,12 @@
             width: 20px;
             height: 20px;
             cursor: pointer;
+
             &:hover {
                 transform: scale(1.1);
             }
-            &-s1{
+
+            &-s1 {
                 width: 100%;
                 height: 2px;
                 display: block;
@@ -47,7 +58,8 @@
                 top: 50%;
                 transform: translateY(-50%) rotate(45deg);
             }
-            &-s2{
+
+            &-s2 {
                 width: 100%;
                 height: 2px;
                 display: block;
@@ -56,6 +68,30 @@
                 transform: translateY(-50%) rotate(-45deg);
                 position: absolute;
                 top: 50%;
+            }
+        }
+    }
+
+    &--body {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        >*{
+            width: 100%;
+            >*{
+                width: 100%;
+            }
+        }
+    }
+
+    &--footer {
+        .button {
+            background-color: $main-color;
+
+            &:hover {
+                background-color: $main-color;
             }
         }
     }
