--- a/src/components/Cases/Case/Info/Info.css
+++ b/src/components/Cases/Case/Info/Info.css
@@ -25,7 +25,7 @@
 .case__contact__info{
     display: grid;
     grid-template-columns: 1fr 3fr;
-    column-gap: 30px;
+    column-gap: 100px;
     margin-top: 50px;
 }
 .case__contact__info__img{
@@ -59,8 +59,7 @@
     grid-template-columns: 30px 1fr;
     column-gap: 5px;
     align-items: center;
-    width: 90%;
-    margin: auto;
+    width: 100%;
 }
 .case__info__card__img{
     display: flex;
@@ -70,20 +69,36 @@
 .case__info__card__img img{
     width: 100%;
 }
+.case__info__text__center{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
 .case__info__text__center > p{
     text-align: center;
     margin: 0;
 }
 .case__info__text__center > div{
-width: max-content;
-margin-left: 10%;
+width: 100%;
+display: flex;
+gap: 50px;
+}
+.case__info__text__center img{
+    max-height: 25px;
+    max-width: 25px;
 }
 .case__info__inner{
     display: grid;
     grid-template-columns: 1fr;
     row-gap: 10px;
-    border: solid 3px #b399cb;
-    border-radius: 10px;
+}
+.case__info__inner__right{
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 0px;
+    border: solid 2px #b399cb;
+    border-radius: 15px;
+    padding: 20px;
 }
 .case__info__card__text{
     align-items: center;
@@ -133,21 +148,27 @@ margin-left: 10%;
 }
 .er__con__wrap{
     border: solid 3px var(--main-color);
-    margin-top: 15px;
+    margin-top: 35px;
     border-radius: 10px;
 }
 .er__con__inner{
     margin: auto;
 }
 .er__con__from{
-    padding: 5px;
+    padding: 10px;
     background-color: #b399cb;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 .er__con__inner p{
     margin: 3px;
 }
 .er__con__inner a{
     color: #000;
+}
+.er__con__from__item{
+    display: flex;
+    justify-content: space-between;
 }
 .plan__modal{
     width: 100%;
@@ -292,6 +313,17 @@ margin-left: 10%;
 }
 #modalSaveBtn.active{
     display: block;
+}
+.plan__active{
+    border-radius: 10px;
+    background-color: #ded9e2;
+    padding: 20px;
+}
+.plan__active__header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 25px;
 }
 .wrap__plan{
     display: grid;
@@ -448,19 +480,29 @@ margin-left: 10%;
 .connections__from .connect__viewer__line{
     background-color: #ded9e2;
 }
+.notes__wrap{
+    border-radius: 10px;
+background-color: #ded9e2;
+padding: 20px;
+}
 .notes__field{
+    width: 100%;
     position: relative;
-    border: solid 3px #b399cb;
     display: grid;
     grid-template-columns: 1fr 30px;
+    column-gap: 15px;
     align-items: center;
     border-radius: 15px;
+    padding: 5px;
+    background-color: #fff;
+    border: solid 2.5px #b399cb;
 }
 .notes__field img{
     cursor: pointer;
 }
 
 .notes__field textarea{
+    width: 100%;
     outline: none;
     resize: none;
     border: none;
@@ -480,79 +522,117 @@ margin-left: 10%;
     grid-template-columns: 1fr 1fr;
 }
 .notes__viewer{
-    background: #fff;
     min-height: 400px;
     max-height: 400px;
     overflow-y: scroll;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     width: calc(100% - 16px);
-    margin: auto;
     padding: 5px;
     display: grid;
     grid-auto-columns: 1fr;
     row-gap: 10px;
-    border: solid 3px #b399cb;
     border-radius: 15px;
     
 }
 .helpes__viewer{
-    background: #fff;
     min-height: 400px;
     max-height: 400px;
     overflow-y: scroll;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     width: calc(100% - 16px);
-    margin: auto;
     padding: 5px;
     display: grid;
     grid-auto-columns: 1fr;
     row-gap: 10px;
-    border: solid 3px #b399cb;
-    border-radius: 15px;   
+    border-radius: 15px; 
 }
 .notes__mes__wrap{
     margin-top: 15px;
 }
-.notes__viewer__line > div{
-    background: #ded9e2;
-    padding: 5px;
-    border-radius: 15px;
-}
 .notes__viewer__data{
     display: flex;
     align-items: center;
+    border-right: solid 3px #b399cb;
 }
 .notes__viewer__data > div{
-    display: grid;
-    row-gap: 5px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.notes__viewer__data span{
+    color: #bababa;
 }
 .notes__viewer__line {
     display: grid;
     grid-template-columns: 1fr 3fr;
     width: 90%;
     margin: auto;
-    padding: 5px;
+    padding: 10px;
     border-radius: 10px;
     column-gap: 15px;
+    border: solid 2px #b399cb;
+    background-color: #fff;
+}
+.notes__viewer__mess{
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    gap: 25px;
+}
+.notes__viewer__mess__panel{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.notes__viewer__mess__panel > div{
+    width: 100%;
+    height: 25px;
+    display: flex;
+    justify-content: space-between;
+}
+.notes__viewer__mess__panel__edit__ico__wrap{
+    width: 100%;
+    display: flex;
+    justify-content: end;
+}
+.notes__viewer__mess__panel__edit__option{
+width: 20px;
+height: 20px;
+border-radius: 5px;
+border: solid 2px green;
+}
+.notes__delete{
+    border: solid 2px red;
+}
+.helpes__wrap{
+    border-radius: 10px;
+    background-color: #ded9e2;
+    padding: 20px;
 }
 .helpes__field{
-    margin: auto;
-    border: solid 3px #b399cb;
-    border-radius: 10px;
+    width: 100%;
+    position: relative;
     display: grid;
     grid-template-columns: 1fr 30px;
+    column-gap: 15px;
     align-items: center;
-    margin-top: 10px;
+    border-radius: 15px;
+    padding: 5px;
+    background-color: #fff;
+    border: solid 2.5px #b399cb;
 }
 .helpes__field img{
     cursor: pointer;
 }
 .helpes__field > textarea{
+    width: 100%;
+    outline: none;
     resize: none;
     border: none;
-    outline: none;
+    margin: auto;
+    display: block;
 }
 .helpes__btn{
     display: grid;
@@ -563,11 +643,15 @@ margin-left: 10%;
     margin-top: 15px;
 }
 .helpes__viewer__line{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
     width: 90%;
     margin: auto;
-    background: #ded9e2;
-    padding: 5px;
+    padding: 10px;
     border-radius: 10px;
+    column-gap: 15px;
+    border: solid 2px #b399cb;
+    background-color: #fff;
 }
 .helpes__viewer__data a{
     color: #000;
@@ -579,26 +663,69 @@ margin-left: 10%;
 .helpes__mes__wrap{
     margin-top: 15px;
 }
-
+.helpes__viewer__mess{
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    gap: 25px;
+}
 .helpes__viewer__data{
     display: flex;
+    align-items: center;
+    border-right: solid 3px #b399cb;
+}
+.helpes__viewer__data >div{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
+}
+.plan__viewer__line{
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    width: 90%;
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
+    column-gap: 15px;
+    border: solid 2px #b399cb;
+    background-color: #fff; 
+}
+.plan__viewer__data{
+    display: flex;
+    align-items: center;
+}
+.plan__viewer__data>div{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.plan__viewer__data > span{
+    color: #bababa;
+}
+.plan__viewer__mess{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 25px;
 }
 .connections__case{
     display: grid;
 }
 .export__pdf__inner{
+   display: flex;
+   gap: 5px;
+   flex-direction: column;
+}
+.item__pdf__wrap{
     display: grid;
-    grid-template-columns: 1fr;
-    row-gap: 5px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
 }
 .item__pdf > label{
     margin-left: 15px;
 }
 .pdf__btn{
-    width: 70%;
     margin: auto;
-    margin-top: 30px;
 }
 .part__plan__date{
     display: flex;
