--- a/src/components/Events/events.module.css
+++ b/src/components/Events/events.module.css
@@ -4,7 +4,6 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 30px;
-    text-align: center;
     margin-top: 50px;
 }
 .wrap > h1{
@@ -14,14 +13,14 @@
     position: relative;
 }
 .res__color{
-    width: 50%;
+    width: 100%;
     border-radius: 10px;
-    height: 10px;
+    height: 7.5px;
     margin: auto;
 }
 .result{
     border-radius: 15px;
-    padding: 15px;
+    padding: 25px;
     display: grid;
     grid-template-columns: 1fr;
     gap: 10px;
@@ -29,7 +28,7 @@
 .res__control{
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 .link{
     color: #000;
