--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ a{
   border: solid 2px #b399cb;
 }
 .primary__btn {
-  height: 50px;
+  height: max-content;
   width: max-content;
   padding: 7.5px 17.5px;
   border: none;
