--- a/src/components/Events/Event/modal.module.css
+++ b/src/components/Events/Event/modal.module.css
@@ -9,10 +9,11 @@
     overflow-y: scroll;
     z-index: 2;
 }
+
 .inner{
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2fr 1fr;
     min-height: 100vh;
 }
 .info{
@@ -24,21 +25,25 @@
     display: flex;
     flex-direction: column;
 }
-.info > div{
-    border-bottom: double 4px var(--main-color);
-    padding-bottom: 10px;
-}
+
 .info{
     padding-top: 80px;
     padding-bottom: 200px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
 }
 .info__inner{
     width: 90%;
     margin: auto;
+
 }
 .add__user__wrap{
     width: 90%;
     margin: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
 @keyframes opas {
     from{
@@ -108,6 +113,19 @@
     grid-template-columns: 1fr;
     gap: 15px;
 }
+.add__plan__item{
+    display: flex;
+    justify-content: space-between;
+}
+.item__textarea{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.item__textarea textarea{
+    border: solid 2px var(--main-color);
+}
+
 @media screen and (max-width:600px) {
     .inner{
         grid-template-columns: 1fr 3fr;
