--- a/src/components/Calendar/CalGrid/cal.module.css
+++ b/src/components/Calendar/CalGrid/cal.module.css
@@ -3,10 +3,10 @@
     grid-template-columns: repeat(7,1fr);
     grid-template-rows: repeat(6,1fr);
     background-color: var(--main-color);
-    gap: 2px;
+    gap: 5px;
     margin: auto;
     box-sizing: border-box;
-    padding: 2px;
+    padding: 5px;
     border-radius: 0px 0 10px 10px;
 }
 .cell{
@@ -16,6 +16,9 @@
     overflow: hidden;
     cursor: pointer;
     transition: all .3s;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .cell:hover{
     background-color: var(--second-color);
@@ -113,12 +116,13 @@
     gap: 15px;
     font-weight: 600;
 }
+
 .event__day{
-    height: 10px;
+    height: 5px;
     width: 90%;
     margin: auto;
     border-radius: 5px;
-    border: solid 1px #fff;
+    margin-bottom: 5px;
 }
 .events{
     margin-top: 15px;
@@ -131,14 +135,13 @@ p{
 }
 .event__line{
     border-bottom: solid 1px var(--main-color);
-    padding: 5px;
     background-color: #f5f5f5fc;
     border-radius: 10px;
-    padding: 5px;
+    padding: 2.5px;
 }
 .current__day{
     background-color: var(--main-color);
-    border: solid 5px #fff;
+    border: solid 4px #fff;
     box-sizing: border-box;
     color: #fff;
     cursor: pointer;
