--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -4,12 +4,34 @@ footer{
 }
 .footer{
     padding: 30px 0;
-
     color: #fff;
     text-align: center;
-    width: 90%;
+    width: 75%;
     margin: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+.footer__top{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.footer__top__line{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.footer__bottom{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.footer__bottom >p, .footer__bottom a{
+    color: #ffffff77 !important;
+    font-size: 12px;
 }
 .footer a{
     color: #fff;
+    text-decoration: underline;
 }
