--- a/src/components/User/user.css
+++ b/src/components/User/user.css
@@ -14,7 +14,7 @@
 }
 
 .case__contact__info__img img {
-  max-width: 100%;
+  max-width: 400px;
   width: 100%;
 }
 
@@ -24,38 +24,48 @@
 
 .case__contact__info__img {
   position: relative;
-  margin-top: 50px;
-  display: grid;
-  grid-template-columns: 20% 38% 38%;
+  display: flex;
+  justify-content: space-between;
   gap: 20px;
 }
-
-.user_info,
-.change_password {
-  height: 320px;
-  border: solid 3px #b399cb;
-  border-radius: 15px;
+.case__contact__info__img__left{
+  display: flex;
+  gap: 75px;
 }
-
-.user_info_name,
-.user_info_phone,
-.user_info_mail {
+.change_password{
+  border: solid 3px var(--main-color);
+  border-radius: 5px;
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.wrap__change__form{
   display: flex;
   align-items: center;
-  margin-left: 15px;
+  flex-direction: column;
+  gap: 10px;
 }
-
+.user_info{
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.user_info_phone, .user_info_mail{
+  display: flex;
+  align-items:center;
+  gap: 15px;
+  font-weight: bold;
+}
 .added_contact,
 .added_report {
   margin-bottom: 20px;
-  border: solid 3px #b399cb;
   border-radius: 15px;
   padding: 20px;
 }
 
-.added_all_contact {
+.added_all_contact, .added_contact {
   background-color: #ded9e2;
-  border: solid 3px #b399cb;
   border-radius: 15px;
   padding: 20px;
 }
@@ -70,9 +80,19 @@
 .added_contact_list_item,
 .added_report_list_item {
   background-color: white;
-  border: solid 3px #b399cb;
+  border: solid 3px var(--main-color);
   border-radius: 15px;
   text-align: center;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  font-size: 15px;
+
+}
+ .added_contact_list_item p{
+  margin: 0;
+  font-weight: bold;
 }
 
 .error__recovery {
@@ -81,14 +101,24 @@
 }
 
 .added_contact_wrap {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
   align-items: center;
   justify-content: space-between;
 }
 .added_new_cases{
   display: flex;
   justify-content: end;
+  height: max-content;
+  width: max-content;
+  padding: 5px 17.5px;
+  border: none;
+  color: #000;
+  transition: all .3s;
+  background-color: var(--main-color);
+  cursor: pointer;
+  border-radius: 10px;
+  font-weight: 700;
+  font-size: 18px;
 }
 .added_contact_title {
   margin: 0;
@@ -102,12 +132,12 @@ ul {
   list-style: none;
   display: flex;
   justify-content: flex-end;
+  gap: 5px;
 }
 
 .user_pagination li > button {
   width: 16px;
   height: 16px;
-  margin-right: 5px;
   border: none;
   border-radius: 50%;
   background: gray;
@@ -117,7 +147,7 @@ ul {
 .added_new_cases a {
   padding: 5px;
   font-weight: 800;
-  border: solid 1px #b399cb;
+  border: solid 1px var(--main-color);
   box-shadow: 0px 0px 7px 7px rgb(179 153 203 / 20%);
   border-radius: 15px;
 }
@@ -137,10 +167,7 @@ ul {
 .btn__active {
   background-color: rgb(126, 160, 223) !important;
 }
-.wrap__change__form{
-  width: 80%;
-  margin: auto;
-}
+
 @media (max-width:700px){
   .case__contact__info__img {
     position: relative;
@@ -171,7 +198,7 @@ ul {
 }
 .added_contact, .added_report {
   margin-bottom: 20px;
-  border: solid 3px #b399cb;
+  border: solid 3px var(--main-color);
   border-radius: 15px;
   padding: 20px 0;
   width: 100%;
