category checkboxes + notification element

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 :root{
-  --main-color: #b399cb;
-  --second-color:#ded9e2;
+  --main-color: #42A5F5;
+  --second-color:#90CAF9;
 }
 body{
   font-family: Montserrat;
