--- a/src/assets/elements/elements.scss
+++ b/src/assets/elements/elements.scss
@@ -1,3 +1,4 @@
 @import './Selects/Select.scss';
 @import './CheckBoxes/CatCheckBoxes.scss';
 @import './CheckBoxes/CheckboxListAccess.scss';
+@import './Notifications/SmallNotification.scss';
