--- a/src/assets/components/Cases/Add-case/Add-case.scss
+++ b/src/assets/components/Cases/Add-case/Add-case.scss
@@ -1,3 +1,4 @@
+@import './CheckboxForm.scss';
 .AddCaseForm{
     width: 100%;
     display: flex;
@@ -11,6 +12,9 @@
         flex-direction: column;
         align-items: center;
         gap: 50px;
+        .required{
+            color: #f00;
+        }
         textarea{
             border: solid 3px $main-color;
             width: 100%;
