--- a/src/components/Contacts/ContactForm/ContactForm.module.css
+++ b/src/components/Contacts/ContactForm/ContactForm.module.css
@@ -15,7 +15,7 @@
   margin-bottom: 10px;
   width: 335px;
   max-width: 100%;
-  border: solid 3px #b399cb;
+  border: solid 3px var(--main-color);
   border-radius: 15px;
 
   color: #757575;
@@ -28,7 +28,7 @@
   height: 42px;
   padding-left: 5px;
   margin-bottom: 10px;
-  border: solid 3px #b399cb;
+  border: solid 3px var(--main-color);
   border-radius: 15px !important;
 }
 
@@ -45,7 +45,7 @@
   letter-spacing: 0.01em;
   resize: none;
   margin-bottom: 12px;
-  border: solid 3px #b399cb;
+  border: solid 3px var(--main-color);
   border-radius: 15px !important;
 }
 
