--- a/src/components/Contacts/ContactListItem/ContactListItem.module.css
+++ b/src/components/Contacts/ContactListItem/ContactListItem.module.css
@@ -3,9 +3,9 @@
   position: relative;
   width: calc(100% - 40px);
   padding: 20px;
-  /* border: solid 3px #b399cb; */
+  /* border: solid 3px var(--main-color); */
   border-radius: 15px;
-  background-color: #ded9e2;
+  background-color: var(--second-color);
   margin-bottom: 15px;
 }
 
@@ -14,7 +14,7 @@
   margin-bottom: 10px;
   padding: 6px 0 9px;
   text-align: center;
-  border: solid 3px #b399cb;
+  border: solid 3px var(--main-color);
   border-radius: 15px;
   background-color: white;
 }
@@ -27,7 +27,7 @@
   align-items: center;
   justify-content: space-evenly;
 
-  border: solid 3px #b399cb;
+  border: solid 3px var(--main-color);
   border-radius: 15px;
   background-color: white;
 }
@@ -56,5 +56,5 @@
   font-size: 20px;
   background-color: white;
   border-radius: 50%;
-  border: solid 3px #b399cb;
+  border: solid 3px var(--main-color);
 }
