--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 
 .wrapper__menu{
-    background-color: #b399cb;
+    background-color: var(--main-color);
     box-shadow: 2px 0 10px -3px #000;
     padding-bottom: 5px;
 }
@@ -90,7 +90,7 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    border: solid 2px #b399cb;
+    border: solid 2px var(--main-color);
     display: flex;
     align-items: center;
     justify-content: center;
