--- a/src/assets/elements/elements.scss
+++ b/src/assets/elements/elements.scss
@@ -2,3 +2,4 @@
 @import './CheckBoxes/CatCheckBoxes.scss';
 @import './CheckBoxes/CheckboxListAccess.scss';
 @import './Notifications/SmallNotification.scss';
+@import './Uploaders/FilesUploader.scss';
