filled new case page, edit plan rework

--- a/src/assets/elements/elements.scss
+++ b/src/assets/elements/elements.scss
@@ -3,3 +3,4 @@
 @import './CheckBoxes/CheckboxListAccess.scss';
 @import './Notifications/SmallNotification.scss';
 @import './Uploaders/FilesUploader.scss';
+@import './Inputs/Input.scss'
