--- a/src/App.css
+++ b/src/App.css
@@ -15,9 +15,6 @@ a{
   color: #000;
   font-weight: 600;
 }
-.MuiOutlinedInput-root {
-  border: solid 2px var(--main-color);
-}
 .primary__btn {
   height: max-content;
   width: max-content;
@@ -120,7 +117,7 @@ input[type=checkbox]:checked:after {
   display: block;
   width: 8px;
   height: 14px;
-  border: solid #766488;
+  border: solid var(--main-color);
   border-width: 0 3px 3px 0;
   transform: rotate(45deg);
   position: absolute;
