--- a/src/assets/components/Cases/Case/Plan.scss
+++ b/src/assets/components/Cases/Case/Plan.scss
@@ -57,6 +57,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+            gap: 8px;
         }
         &-status {
             display: flex;
