--- a/src/assets/modals/Modal.scss
+++ b/src/assets/modals/Modal.scss
@@ -87,6 +87,10 @@
     }
 
     &--footer {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 24px;
         .button {
             background-color: $main-color;
 
