case short info inputs + plan styles

--- a/src/assets/components/Cases/Case/Info/CaseShortInfo.scss
+++ b/src/assets/components/Cases/Case/Info/CaseShortInfo.scss
@@ -62,8 +62,10 @@
       &-card {
           display: flex;
           justify-content: space-between;
-          p{
+          span{
+            p{
             font-weight: bold
+            }
           }
           span {
               display: flex;
