--- a/src/assets/elements/elements.scss
+++ b/src/assets/elements/elements.scss
@@ -3,4 +3,5 @@
 @import './CheckBoxes/CheckboxListAccess.scss';
 @import './Notifications/SmallNotification.scss';
 @import './Uploaders/FilesUploader.scss';
-@import './Inputs/Input.scss'
+@import './Inputs/Input.scss';
+@import './Uploaders/PhotoUploader.scss';
