--- a/src/assets/components/Cases/Cases.scss
+++ b/src/assets/components/Cases/Cases.scss
@@ -2,4 +2,5 @@
 @import "./Case/Case.scss";
 @import "./Case/Info/Info.scss";
 @import "./Case/Plan.scss";
-@import "./Case/Gallery.scss"
+@import "./Case/Gallery.scss";
+@import "./Case/GiveHelp.scss";
