--- a/src/components/Loading/Loadingpage.module.css
+++ b/src/components/Loading/Loadingpage.module.css
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 100vh;
 }
 .loading__container img{
     max-width: 90%;
