--- a/src/assets/components/Cases/Case/GiveHelp.scss
+++ b/src/assets/components/Cases/Case/GiveHelp.scss
@@ -1,50 +1,94 @@
-.GiveHelp{
+.GiveHelp {
     border-radius: 10px;
     background-color: $background-color;
     padding: 20px;
-    &-inner{
-        &-viewer{
-            &-line{
+    &-notes-delete{
+        border: solid 2px red !important;
+    }
+    &-inner {
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+        &-viewer {
+            &-line {
                 display: grid;
-                grid-template-columns: 1fr 3fr;
-                width: 90%;
-                margin: auto;
+                grid-template-columns: 1fr 2.5fr;
                 padding: 10px;
                 border-radius: 10px;
                 column-gap: 15px;
-                border: solid 2px var(--main-color);
+                border: solid 2px $main-color;
                 background-color: #fff;
-                &-data{
-                    display: flex;
-                    align-items: center;
-                    border-right: solid 3px var(--main-color);
-                }
-                a{
-                    color: #000;
-                    text-decoration: none;
-                }
-                div{
-                    height: 100%;
+
+                &-data {
                     display: flex;
                     flex-direction: column;
                     justify-content: space-between;
+                    gap: 15px;
+                    border-right: solid 3px $main-color;
+                    padding-right: 5px;
+                    >div{
+                        display: flex;
+                        flex-direction: column;
+                    }
+                    >span{
+                        color: #bababa;
+                    }
                 }
-                &-message{
+
+                a {
+                    color: #000;
+                    text-decoration: none;
+                }
+
+                &-message {
                     display: grid;
                     grid-template-columns: 3fr 1fr;
                     gap: 25px;
+
+                    &-panel {
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+                        gap: 15px;
+
+                        >div {
+                            width: 100%;
+                            height: 25px;
+                            display: flex;
+                            justify-content: space-between;
+                        }
+
+                        &-edit {
+                            &-option {
+                                width: 20px;
+                                height: 20px;
+                                border-radius: 5px;
+                                border: solid 2px green;
+                                cursor: pointer;
+                            }
+
+                            &-ico-wrap {
+                                width: 100%;
+                                display: flex;
+                                justify-content: end;
+                                cursor: pointer;
+                            }
+                        }
+
+                    }
                 }
             }
 
         }
-        &-message{
-            margin-top: 15px;
+
+        &-message {
             width: 100%;
             position: relative;
             display: flex;
             flex-direction: column;
             gap: 15px;
-            &-btn{
+
+            &-btn {
                 display: grid;
                 grid-template-columns: 1fr 3fr;
                 column-gap: 20px;
@@ -53,7 +97,8 @@
                 margin-top: 15px;
                 width: 100%;
             }
-            &-field{
+
+            &-field {
                 width: 100%;
                 position: relative;
                 display: grid;
@@ -64,7 +109,8 @@
                 padding: 5px;
                 background-color: #fff;
                 border: solid 2.5px var(--main-color);
-                textarea{
+
+                textarea {
                     width: 100%;
                     outline: none;
                     resize: none;
@@ -72,10 +118,11 @@
                     margin: auto;
                     display: block;
                 }
-                img{
+
+                img {
                     cursor: pointer;
                 }
-                
+
             }
         }
     }
